
  next
==========================
- NEW: settings files code completion support (IVYDE-22)
- NEW: Option to resolve to local eclipse projects (IVYDE-89) (thanks to Antony James Wilkins and Matt Goldspink)

- IMPROVE: Retrieve after resolve feature does not clean target directory first (IVYDE-105)

- FIX: IvyDE crashes during resolve due to an incompatibility with Eclipse 3.2 (IVYDE-108)

  version 2.0.0 alpha1
===========================
- NEW: [build] Use the latest ivy to resolve dependencies (IVYDE-62) (thanks to Nicolas Lalevee) 
- NEW: Order alphabetically the entries in the class path container (IVYDE-69) (thanks to Nicolas Lalevee)

- IMPROVE: The dialog box opened for resolve failure should show the status message on several lines (IVYDE-95)
- IMPROVE: Recognize more source and javadoc artifacts names (IVYDE-66) (thanks to Nicolas Lalevee)
- IMPROVE: Use Ivy Bundle instead of packaging ivy.jar in IvyDE bundle (IVYDE-67)
- IMPROVE: enable 'Resolve all' action (IVYDE-42) (thanks to Thomas FRIOL)
- IMPROVE: Support javadoc and sources even in modules where they are not declared (IVYDE-46)
- IMPROVE: Simplify the resolve process (IVYDE-64) (thanks to Nicolas Lalevee) 
- IMPROVE: Add new target to build.xml to build the plugin with Ant (IVYDE-88)

- FIX: On classpath issues the user is not notified (IVYDE-85)
- FIX: Loading config causes BuildException and eclipse freaks out (IVYDE-79)
- FIX: NPE that break eclipse: the Java project becomes empty (IVYDE-84)
- FIX: IvyDE is dependant on environment variable MOZILLA_FIVE_HOME (IVYDE-10)
- FIX: no support of organization spelling (IVYDE-19)
- FIX: NPE when setting a bad file for the ivy setting path in the global configuration panel (IVYDE-91)
- FIX: IvyDE 1.0.3 "Run configuration" problem with Eclipse 3.x (IVYDE-32)
- FIX: Error while trying to edit an ivy.xml without a configured container (IVYDE-83)
- FIX: IvyDE resolve also evicted artifacts (IVYDE-76) (thanks to Nicolas Lalevee)